Improve visualisations in log.ipynb

--- a/log.ipynb
+++ b/log.ipynb
@@ -8,30 +8,74 @@
    "source": [
     "import json\n",
     "\n",
+    "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
     "\n",
-    "run_ids = []\n",
-    "rewards = []\n",
-    "with open(\"log.jsonl\", \"r\") as f:\n",
-    "    for line in f.readlines():\n",
-    "        log = json.loads(line)\n",
-    "        run_ids.append(log[\"run_id\"])\n",
-    "        matches = [\n",
-    "            result[\"reward\"] for result in log[\"results\"] or []\n",
-    "            if result[\"name\"] == \"vibe\"\n",
-    "        ]\n",
-    "        if log[\"error\"] is not None or not matches:\n",
-    "            rewards.append(-1)\n",
-    "        else:\n",
-    "            rewards.append(matches[0])\n",
+    "palette = sns.color_palette(\"rocket_r\")\n",
     "\n",
-    "unique_run_ids = list(set(run_ids))\n",
-    "run_id_to_color = {uid: plt.cm.tab10(i % 10) for i, uid in enumerate(unique_run_ids)}\n",
+    "with open(\"grpo2.jsonl\", \"r\") as f:\n",
+    "    lines = f.readlines()\n",
     "\n",
-    "_ = plt.scatter(\n",
-    "    range(len(rewards)),\n",
-    "    rewards,\n",
-    "    c=[run_id_to_color[run_id] for run_id in run_ids],\n",
+    "stats = []\n",
+    "for i, line in enumerate(lines):\n",
+    "    data = json.loads(line)\n",
+    "    if data[\"run_id\"] not in {\n",
+    "        # \"6df3c011\",\n",
+    "        # \"5c172e2b\",\n",
+    "        # \"34f149c3\",\n",
+    "        # lora_rank=16!\n",
+    "        \"6b6e34e9\",\n",
+    "        # computation graph reward shaping\n",
+    "        \"3294e8e9\",\n",
+    "    }: continue\n",
+    "    for key in data.keys():\n",
+    "        if key.startswith(\"reward\"):\n",
+    "            value = data[key]\n",
+    "            stats.append({\n",
+    "                \"step\": data[\"step\"],\n",
+    "                \"id\": i,\n",
+    "                \"run_id\": data[\"run_id\"],\n",
+    "                \"value\": value, \"reward\": key,\n",
+    "            })\n",
+    "\n",
+    "df = pd.DataFrame(stats)\n",
+    "\n",
+    "focus = \"3294e8e9\"\n",
+    "run_ids = df.run_id.unique()\n",
+    "\n",
+    "sns.relplot(\n",
+    "    df[(df[\"reward\"] == \"reward\")].groupby([\"run_id\", \"step\"]).max().reset_index(),\n",
+    "    x=\"step\",\n",
+    "    y=\"value\",\n",
+    "    hue=\"run_id\",\n",
+    "    height=1.5,\n",
+    "    aspect=1.5,\n",
+    "    alpha=0.5,\n",
+    "    hue_order=run_ids,\n",
+    ")\n",
+    "sns.relplot(\n",
+    "    df[(df[\"reward\"] == \"reward_computation_graph\") & (df[\"run_id\"] == focus)],\n",
+    "    x=\"step\", y=\"value\",\n",
+    "    hue=\"run_id\",\n",
+    "    height=1.5,\n",
+    "    aspect=1.5,\n",
+    "    alpha=0.3,\n",
+    "    hue_order=run_ids,\n",
+    ")\n",
+    "\n",
+    "_ = sns.relplot(\n",
+    "    df,\n",
+    "    x=\"step\",\n",
+    "    y=\"value\",\n",
+    "    col=\"reward\",\n",
+    "    hue=\"run_id\",\n",
+    "    col_wrap=4,\n",
+    "    facet_kws=dict(sharex=True, sharey=False),\n",
+    "    height=2.0,\n",
+    "    aspect=1.5,\n",
+    "    kind=\"line\",\n",
+    "    hue_order=run_ids,\n",
     ")"
    ]
   },
@@ -59,7 +103,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.17"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
