Consolidate vibe and vibe-rl

--- a/log.ipynb
+++ b/log.ipynb
@@ -8,12 +8,9 @@
    "source": [
     "import json\n",
     "\n",
+    "import altair as alt\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "\n",
-    "palette = sns.color_palette(\"rocket_r\")\n",
-    "\n",
+    " \n",
     "with open(\"grpo2.jsonl\", \"r\") as f:\n",
     "    lines = f.readlines()\n",
     "\n",
@@ -25,9 +22,26 @@
     "        # \"5c172e2b\",\n",
     "        # \"34f149c3\",\n",
     "        # lora_rank=16!\n",
-    "        \"6b6e34e9\",\n",
+    "        # \"6b6e34e9\",\n",
     "        # computation graph reward shaping\n",
-    "        \"3294e8e9\",\n",
+    "        # \"3294e8e9\",\n",
+    "        # temp=0.9, lora_rank=16, computation graph reward shaping\n",
+    "        # \"c5b79e89\",\n",
+    "        # temp=1.2, lora_rank=16, minimal rewards\n",
+    "        # \"c15c5ae6\",\n",
+    "        # \"0117ec79\",\n",
+    "        # 'fc929682',\n",
+    "        \"c6cfce32\",\n",
+    "        \"3caa4bed\",\n",
+    "\n",
+    "        # SFT\n",
+    "        # \"c3ad3436\",\n",
+    "        # \"431e7d9a\",\n",
+    "        \"6a492447\",\n",
+    "        \n",
+    "        # SFT + computation graph\n",
+    "        \"ae4093e3\",\n",
+    "        \"a29a3777\",\n",
     "    }: continue\n",
     "    for key in data.keys():\n",
     "        if key.startswith(\"reward\"):\n",
@@ -41,43 +55,43 @@
     "\n",
     "df = pd.DataFrame(stats)\n",
     "\n",
-    "focus = \"3294e8e9\"\n",
-    "run_ids = df.run_id.unique()\n",
+    "alt.data_transformers.enable(\"vegafusion\")\n",
     "\n",
-    "sns.relplot(\n",
-    "    df[(df[\"reward\"] == \"reward\")].groupby([\"run_id\", \"step\"]).max().reset_index(),\n",
-    "    x=\"step\",\n",
-    "    y=\"value\",\n",
-    "    hue=\"run_id\",\n",
-    "    height=1.5,\n",
-    "    aspect=1.5,\n",
-    "    alpha=0.5,\n",
-    "    hue_order=run_ids,\n",
-    ")\n",
-    "sns.relplot(\n",
-    "    df[(df[\"reward\"] == \"reward_computation_graph\") & (df[\"run_id\"] == focus)],\n",
-    "    x=\"step\", y=\"value\",\n",
-    "    hue=\"run_id\",\n",
-    "    height=1.5,\n",
-    "    aspect=1.5,\n",
-    "    alpha=0.3,\n",
-    "    hue_order=run_ids,\n",
-    ")\n",
+    "bins = 128\n",
+    "mean = alt.Chart(df).encode(\n",
+    "    alt.X('step:Q').bin(maxbins=bins),\n",
+    "    alt.Y('mean(value):Q'),\n",
+    "    alt.Color('run_id:N'),\n",
+    ").mark_line()\n",
     "\n",
-    "_ = sns.relplot(\n",
-    "    df,\n",
-    "    x=\"step\",\n",
-    "    y=\"value\",\n",
-    "    col=\"reward\",\n",
-    "    hue=\"run_id\",\n",
-    "    col_wrap=4,\n",
-    "    facet_kws=dict(sharex=True, sharey=False),\n",
-    "    height=2.0,\n",
-    "    aspect=1.5,\n",
-    "    kind=\"line\",\n",
-    "    hue_order=run_ids,\n",
-    ")"
+    "errorband = alt.Chart(df).encode(\n",
+    "    alt.X('step:Q').bin(maxbins=bins),\n",
+    "    alt.Y('max(value):Q'),\n",
+    "    alt.Color('run_id:N'),\n",
+    ").mark_errorband(extent=\"ci\")\n",
+    "\n",
+    "maximum = alt.Chart(df).encode(\n",
+    "    alt.X('step:Q').bin(maxbins=bins),\n",
+    "    alt.Y('max(value):Q'),\n",
+    "    alt.Color('run_id:N'),\n",
+    ").mark_circle()\n",
+    "\n",
+    "(errorband + mean + maximum).facet(\"reward\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.groupby([\"reward\", \"run_id\"])[[\"value\"]].max()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
