Fix ancestor diff visualisation

--- a/notebooks/vibevolve.ipynb
+++ b/notebooks/vibevolve.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from difflib import Differ\n",
     "import json\n",
     "\n",
     "import altair as alt\n",
@@ -123,8 +124,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from swarm.vibevolve import src_from_history\n",
-    "from difflib import Differ\n",
+    "def src_from_history(run_id, completion_id):\n",
+    "    path = f\"../results/vibevolve/{run_id}/{completion_id}/completion.txt\"\n",
+    "    with open(path, \"r\") as f:\n",
+    "        completion = f.read()\n",
+    "    return src_from_completion(completion)\n",
+    "\n",
+    "def src_from_completion(completion):\n",
+    "    if \"```python\" not in completion:\n",
+    "        return None\n",
+    "    _, src, *__ = completion.split(\"```python\")\n",
+    "    if \"```\" not in src:\n",
+    "        return None\n",
+    "    src, *_ = src.split(\"```\")\n",
+    "    return src\n",
     "\n",
     "def show_diff(string1, string2):\n",
     "    # https://www.timsanteford.com/posts/creating-a-git-like-diff-viewer-in-python-using-difflib/\n",
@@ -140,11 +153,11 @@
     "        else:\n",
     "            print(line)\n",
     "\n",
-    "\n",
     "lookup = {\n",
     "    (record[\"run_id\"], record[\"completion_id\"]): record\n",
     "    for record in records\n",
     "}\n",
+    "\n",
     "def get_parent(run_id, completion_id):\n",
     "    return lookup[(run_id, completion_id)][\"parent_completion_id\"]\n",
     "\n",
@@ -177,10 +190,15 @@
     "    print(\"-\" * 120)\n",
     "    print(parent_id, \"->\", child_id)\n",
     "    print(parent_reward, \"->\", child_reward, \"+\", child_reward - parent_reward)\n",
-    "    # print(diff)\n",
-    "\n",
     "    show_diff(parent_src, child_src)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
