Filter run ids from training progress visualisation

--- a/notebooks/vibevolve.ipynb
+++ b/notebooks/vibevolve.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from collections import defaultdict\n",
     "from difflib import Differ\n",
     "import json\n",
     "\n",
@@ -31,13 +32,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from collections import defaultdict\n",
-    "\n",
+    "blacklist = [\n",
+    "    \"0c00e39a\",\n",
+    "    \"89bbc310\",\n",
+    "    # \"299e3db9\",\n",
+    "    \"641bf644\",\n",
+    "    \"58771c1b\",\n",
+    "    \"bcb3952c\",\n",
+    "    # \"f0a48f56\",\n",
+    "]\n",
     "min_timestamp = {}\n",
     "cummax_reward = defaultdict(dict)\n",
     "data = []\n",
     "for record in sorted(records, key=lambda x: x[\"timestamp\"]):\n",
     "    run_id = record[\"run_id\"]\n",
+    "    if run_id in blacklist:\n",
+    "        continue\n",
+    "\n",
     "    timestamp = record[\"timestamp\"]\n",
     "\n",
     "    if run_id not in min_timestamp:\n",
@@ -71,7 +82,7 @@
    "source": [
     "alt_data = alt.Data(values=data)\n",
     "\n",
-    "x = alt.X(\"minutes:Q\", axis=alt.Axis(title=\"seconds\"))\n",
+    "x = alt.X(\"minutes:Q\", axis=alt.Axis(title=\"minutes\"))\n",
     "color = alt.Color(\"run_id:N\")\n",
     "tooltip_cols = [\n",
     "    \"run_id:N\",\n",
@@ -82,16 +93,26 @@
     "    \"parent_completion_id:N\",\n",
     "]\n",
     "\n",
+    "y = alt.Y(\n",
+    "    \"reward:Q\",\n",
+    "    axis=alt.Axis(title=\"reward\"),\n",
+    "    scale=alt.Scale(domain=(-1, 1)),\n",
+    ")\n",
     "points = alt.Chart(alt_data).encode(\n",
     "    x,\n",
-    "    alt.Y(\"reward:Q\", axis=alt.Axis(title=\"reward\")),\n",
+    "    y,\n",
     "    color,\n",
     "    tooltip=tooltip_cols,\n",
     ").mark_circle(opacity=0.2)\n",
     "\n",
+    "y = alt.Y(\n",
+    "    \"cummax_reward:Q\",\n",
+    "    axis=alt.Axis(title=\"reward\"),\n",
+    "    scale=alt.Scale(domain=(-1, 1)),\n",
+    ")\n",
     "cummax = alt.Chart(alt_data).encode(\n",
     "    x,\n",
-    "    alt.Y(\"cummax_reward:Q\", axis=alt.Axis(title=\"reward\")),\n",
+    "    y,\n",
     "    color,\n",
     "    tooltip=tooltip_cols,\n",
     ").mark_line(strokeWidth=2)\n",
